[package]
name = "main"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "komodo-defi-proxy"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.53"
bytes = "1.1.0"
ethereum-types = { version = "0.4", default-features = false, features = ["std", "serialize"] }
futures-util = "0.3.21"
hyper = { version = "0.14.18", default-features = false, features = ["server", "http1", "http2", "tcp", "client"] }
hyper-tls = "0.5.0"
jsonwebtoken = "8.1.0"
log = "0.4.17"
once_cell = "1.12.0"
url = { version = "2.2.2", features = ["serde"] }
redis = { version = "0.21.5", default-features = false, features = ["tokio-comp"] }
serde = "1.0.137"
serde_json = "1.0.81"
sha3 = "0.9"
simple_logger = "2.1.0"
tokio = { version = "1.12.0", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
# From our sources
# proxy_signature = { git = "https://github.com/KomodoPlatform/komodo-defi-framework", rev = "0784f1a" }
proxy_signature = { path = "/home/nimda/devspace/KomodoPlatform/komodo-defi-framework/mm2src/proxy_signature" }

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = "0.5.0"

[dev-dependencies]
hex = "0.4.3"
